--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="container">                    
                     <div class="organic-wrap"> 
-                        <img class="logo-img" alt="" src="assets/img/logo/logo-1.png" />
+                        <img class="logo-img" alt="" src="assets/img/logo/logo-1.png" style="padding-left: 80px;"/>
                     </div>
                 </div>
                 <div class="container-fluid"> 
@@ -387,7 +387,7 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://98.67.191.173:5000/Fruits/GetAllFruits";
+    const apiUrl = "https://badammi.com:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
