--- a/Badammi/shop-single.html
+++ b/Badammi/shop-single.html
@@ -235,7 +235,7 @@ $(document).ready(function () {
             const fruitId = new URLSearchParams(window.location.search).get("id");
             if (!fruitId) return console.warn("❌ Id не найден в URL");
 
-            const apiUrl = `http://98.67.191.173:5000/Fruits/ShopOne?id=${fruitId}`;
+            const apiUrl = `https://badammi.com:5000/Fruits/ShopOne?id=${fruitId}`;
             const response = await fetch(apiUrl, { headers: { "ngrok-skip-browser-warning": "true" } });
             if (!response.ok) throw new Error("Ошибка загрузки данных: " + response.status);
             const fruit = await response.json();
@@ -252,7 +252,7 @@ $(document).ready(function () {
             mainSlider.empty();
             thumbSlider.empty();
 
-            const mainImgUrl = `http://98.67.191.173:5000/photos/${fruit.id}.png`;
+            const mainImgUrl = `https://badammi.com:5000/photos/${fruit.id}.png`;
             const thumbnails = [mainImgUrl];
 
 function addLineBreaks(text, wordsPerLine = 3) {
@@ -269,8 +269,7 @@ function addLineBreaks(text, wordsPerLine = 3) {
             if (fruit.childPhotoPath && fruit.childPhotoPath.length > 0) {
                 fruit.childPhotoPath.forEach((_, index) => {
                     const processedComposition = addLineBreaks(fruit.childPhotoText[index], 3);
-                    const imgUrl = `http://98.67.191.173:5000/photos/${fruit.id}_${index + 1}.png`;
-                    thumbnails.push(imgUrl);
+                    const imgUrl = `https://badammi.com:5000/photos/${fruit.id}_${index + 1}.png`;
                     const card = `
                 <div class="col-lg-3 col-md-4 col-sm-6"> 
                     <div class="product-box"> 
@@ -288,8 +287,8 @@ function addLineBreaks(text, wordsPerLine = 3) {
             container.append(card);
                 });
             }
-            fruit.AddedPhotoPath.forEach((_, index) => {
-                    const imgUrl = `http://98.67.191.173:5000/photos/${fruit.id}_1_${index + 1}.png`;
+            fruit.addedPhotoPath.forEach((_, index) => {
+                    const imgUrl = `https://badammi.com:5000/photos/${fruit.id}_1_${index + 1}.png`;
                     thumbnails.push(imgUrl);
                 });
             photo = thumbnails;
@@ -423,7 +422,7 @@ function prevPhoto() {
 
 // === Загрузка всех фруктов для меню ===
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://98.67.191.173:5000/Fruits/GetAllFruits";
+    const apiUrl = "https://badammi.com:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, { headers: { "ngrok-skip-browser-warning": "true" } });
@@ -467,7 +466,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 <script>
     async function loadProducts() {
-    const apiUrl = "http://98.67.191.173:5000/Fruits/GetAllFruits";
+    const apiUrl = "https://badammi.com:5000/Fruits/GetAllFruits";
     const second = $("#listproduct"); // второй контейнер
 
     try {
@@ -500,7 +499,7 @@ document.addEventListener("DOMContentLoaded", async () => {
             if(allreadyadded.some(x => x === rand)){
                 continue;
             }
-            const photoResponse = await fetch(`http://98.67.191.173:5000/photos/${filteredFruits[rand].id}.png`, {
+            const photoResponse = await fetch(`https://badammi.com:5000/photos/${filteredFruits[rand].id}.png`, {
                 headers: {
                     "ngrok-skip-browser-warning": "true"
                 }
