--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -387,7 +387,7 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "https://badammi.com:5000/Fruits/GetAllFruits";
+    const apiUrl = "/api/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
