--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -327,7 +327,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "https://badammi.com:5000/Fruits/GetAllFruits";
+    const apiUrl = "/api/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
