--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -72,6 +72,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Home</a>                                            
                                 </li> 
                                 <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="shop.html">All Catalog</a></li>
                                 <li class="dropdown"> 
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
