--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -61,6 +61,7 @@
                                     <a href="index.html">Home</a>                                            
                                 </li> 
                                 <li class="active"><a href="#">About Us</a></li>
+                                <li><a href="shop.html">All Catalog</a></li>
                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
@@ -267,12 +268,6 @@
                                             <a href="https://www.youtube.com/" target="_blank" style="margin-right: 10px; color: #ff0000;">
                                                 <i class="fab fa-youtube fa-lg"></i>
                                             </a>
-                                            <a href="https://www.facebook.com/" target="_blank" style="margin-right: 10px; color: #1877f2;">
-                                                <i class="fab fa-facebook fa-lg"></i>
-                                            </a>
-                                            <a href="https://www.instagram.com/" target="_blank" style="color: #e4405f;">
-                                                <i class="fab fa-instagram fa-lg"></i>
-                                            </a>
                                         </div>
                                     </li>
                                 </ul>
@@ -393,6 +388,5 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 });
 </script>
-
     </body>
 </html>
