--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -42,11 +42,7 @@
 
         <div id="loading">
             <div class="loader">
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
+                <img alt="" style="width: 600px;" src="assets/img/logo/main-logo-loader.png"/>
             </div>
         </div>
 
@@ -213,7 +209,7 @@
             <!-- / Organic All Ends -->
 
             <!-- Organic Farmfood Starts-->
-            <section class="organic-farm sec-space-top light-bg">
+            <section class="organic-farm sec-space-top white-bg">
 
                 <img alt="" src="assets/img/extra/sec-img-1.png" class="left-bg-img" />  
                 <img alt="" src="assets/img/extra/sec-img-2.png" class="center-bg-img" />  
@@ -256,7 +252,7 @@
                     </div>
 
                     <div class="rel-div feature-img">
-                        <img src="assets/img/extra/feature.png" alt="" />
+                        <img src="assets/img/extra/feature.png" style="height: 400px;" alt="" />
                     </div>
                 </div>
             </section>
@@ -272,7 +268,7 @@
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-1.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">organic </span> <strong> nuts</strong> </a> </h3>                                        
+                                        <h3 class="title-1"> <span class="light-font">organic </span> <strong> nuts</strong>  </h3>                                        
                                         <a class="clr-txt font-2" href="#"> <i> </i> </a>
                                     </div>
                                 </div>
@@ -280,14 +276,14 @@
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-2.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">fresh </span> <strong> vegetables</strong> </a> </h3>
+                                        <h3 class="title-1">  <span class="light-font">fresh </span> <strong> vegetables</strong> </h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4"> 
                                     <div class="organic-prod">
                                         <img src="assets/img/extra/organic-3.png" alt="" />
                                         <span class="divider"></span>
-                                        <h3 class="title-1"> <a href="#"> <span class="light-font">fresh </span> <strong> fruits</strong> </a> </h3>
+                                        <h3 class="title-1"><span class="light-font">fresh </span> <strong> fruits</strong> </h3>
                                     </div>
                                 </div>
                             </div>
@@ -353,12 +349,6 @@
                                         <div class="social-icons" style="margin-top: 15px;">
                                             <a href="https://www.youtube.com/" target="_blank" style="margin-right: 10px; color: #ff0000;">
                                                 <i class="fab fa-youtube fa-lg"></i>
-                                            </a>
-                                            <a href="https://www.facebook.com/" target="_blank" style="margin-right: 10px; color: #1877f2;">
-                                                <i class="fab fa-facebook fa-lg"></i>
-                                            </a>
-                                            <a href="https://www.instagram.com/" target="_blank" style="color: #e4405f;">
-                                                <i class="fab fa-instagram fa-lg"></i>
                                             </a>
                                         </div>
                                     </li>
@@ -454,6 +444,52 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 });
 </script>
+
+<style>
+    #loading {
+    position: fixed; /* Закрепляем на экране */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff; /* Цвет фона, пока идет загрузка */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Убедитесь, что он поверх всего */
+}
+
+/* Контейнер для логотипа, чтобы его центрировать */
+.loader {
+    /* Дополнительные стили, если нужны, но для анимации они не критичны */
+}
+
+/* Стили для самого изображения, где будет анимация */
+.loader img {
+    width: 100px; /* Установите желаемый размер */
+    height: auto;
+    /* --- КЛЮЧЕВАЯ ЧАСТЬ: АНИМАЦИЯ --- */
+    animation: bounce 1.2s infinite alternate; /* Применяем анимацию */
+    transform-origin: center; /* Центр, вокруг которого происходит трансформация */
+}
+
+/* Определение анимации */
+@keyframes bounce {
+    /* Кадры анимации */
+    0% {
+        transform: scale(0.9); /* Начальное состояние: немного отдалено */
+        opacity: 0.8;
+    }
+    50% {
+        transform: scale(1.15); /* Середина: немного приближено ("прыгнуло") */
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.0); /* Конец: возвращается к нормальному размеру */
+        opacity: 0.9;
+    }
+}
+</style>
 
     </body>
 </html>
